fazendo os models dos viwers

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,13 +11,15 @@
       href="./images/titlePageicon.png"
     />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- Inportação e configuração da fonte Inter -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Importação do tailwind-->
+    <link href="../public/css/styles.css" rel="stylesheet">
+    
   </head>
   <body class="bg-gray-100 font-inter transition-all">
     <!-- Navbar -->
